# genAI-MIDI-module

./: LICENSE  README.md  config.toml  genai_midi_module.py  genaimodule.service  install.sh  install_hardware.sh  install_software.sh  install_start_on_boot.sh  pyproject.toml  start.sh  websocket_test_partner.py
configs/: AiC-alec-u2midipro.toml  AiC-charles-u6midipro.toml  arturia-minilab3-analogV.toml  charles-u6midipro.toml  microfreak.toml  op1-volca-fm.toml  xtouch-to-volca-fm.toml
empi_mdrnn/: __init__.py
logs/: .gitkeep
test_scripts/: websocket_test_partner.py  websocket_test_partner_2.py
