[tool.poetry]
name = "genai-midi-module"
version = "0.1.0"
description = "A generative AI MIDI module for creating intelligent musical instruments with Raspberry Pi"
authors = ["Charles Martin <cpm@charlesmartin.com.au>"]
license = "MIT"
readme = "README.md"
packages = [{include = "genai_midi_module"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-macos = {version = "2.15.0", platform = "darwin"}
tensorflow = [
  {version = "2.15.0", platform = "linux"},
  {version = "2.15.0", platform = "win32"}
  ]
tensorflow-probability = "0.23.0"
python-osc = "^1.8.3"
keras-mdn-layer = "^0.4.0"
pyserial = "^3.5"
websockets = "^12.0"
mido = "^1.3.2"
python-rtmidi = "^1.5.8"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
