[tool.poetry]
name = "genai-midi-module"
version = "0.1.0"
description = "A generative AI MIDI module for creating intelligent musical instruments with Raspberry Pi"
authors = ["Charles Martin <cpm@charlesmartin.com.au>"]
license = "MIT"
readme = "README.md"
packages = [{include = "genai_midi_module"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-macos = {markers="sys_platform == 'darwin' and platform_machine == 'aarch64'", version = "2.15.0"}
tensorflow = [
  {markers="sys_platform == 'darwin' and platform_machine == 'x86_64'", version = "2.15.0"},
  {markers="sys_platform == 'linux' and platform_machine == 'x86_64'", version = "2.15.0"},
  {platform = "win32", version = "2.15.0"},
  {markers="sys_platform == 'linux' and platform_machine == 'aarch64'", url="https://github.com/PINTO0309/Tensorflow-bin/releases/download/v2.15.0.post1/tensorflow-2.15.0.post1-cp311-none-linux_aarch64.whl"}, # this is specifically for Raspberry Pis.
  ]
tensorflow-probability = "0.23.0"
python-osc = "^1.8.3"
keras-mdn-layer = "~0.4.1"
pyserial = "^3.5"
websockets = "^12.0"
mido = "^1.3.2"
python-rtmidi = "^1.5.8"
click = "^8.1.7"

# [tool.poetry.group.rpi]
# optional = true

# [tool.poetry.group.rpi.dependencies]
# python = ">=3.11,<3.12"
# tensorflow = [
  # {platform = "linux", url="https://github.com/PINTO0309/Tensorflow-bin/releases/download/v2.15.0.post1/tensorflow-2.15.0.post1-cp311-none-linux_aarch64.whl"},
#   ]
# tensorflow-probability = "0.23.0"
# python-osc = "^1.8.3"
# keras-mdn-layer = "^0.4.0"
# pyserial = "^3.5"
# websockets = "^12.0"
# mido = "^1.3.2"
# python-rtmidi = "^1.5.8"
# click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
